create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1509,7 +1509,7 @@ a {
 .cid-ugh8T86o7l {
   padding-top: 3rem;
   padding-bottom: 6rem;
-  background-image: url("../../../assets/images/mbr-1920x1275.jpg");
+  background-color: #ffffff;
 }
 .cid-ugh8T86o7l .underline .line {
   width: 2rem;
@@ -1668,7 +1668,7 @@ a {
   color: #dfead9;
 }
 .cid-ugh8T86o7l .main-title {
-  color: #ffffff;
+  color: #4479d9;
 }
 .cid-ughTCZCCiF {
   padding-top: 1rem;
