create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -99,7 +99,7 @@ body {
   border-radius: 4px;
 }
 .bg-primary {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
 }
 .bg-success {
   background-color: #40b0bf !important;
@@ -115,7 +115,7 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   border-color: #ffffff !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
@@ -124,15 +124,15 @@ body {
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   border-color: #000000 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #4479d9 !important;
-  border-color: #4479d9 !important;
+  background-color: #001fff !important;
+  border-color: #001fff !important;
 }
 .btn-primary:hover {
   background-color: white!important;
@@ -147,7 +147,7 @@ body {
 .btn-primary span {
   background: #ffffff;
   transition: all 0.3s;
-  color: #4479d9;
+  color: #001fff;
   border-radius: 50%;
   padding: 8px;
   font-size: 0.8rem!important;
@@ -476,26 +476,26 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: #4479d9;
-  color: #4479d9;
+  border-color: #001fff;
+  color: #001fff;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #4479d9 !important;
+  color: #001fff !important;
   background-color: transparent!important;
-  border-color: #4479d9 !important;
+  border-color: #001fff !important;
   box-shadow: none!important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #4479d9 !important;
-  border-color: #4479d9 !important;
+  background-color: #001fff !important;
+  border-color: #001fff !important;
 }
 .btn-primary-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -504,7 +504,7 @@ body {
   color: #ffffff !important;
 }
 .btn-primary-outline span {
-  background: #4479d9;
+  background: #001fff;
   transition: all 0.3s;
   color: #ffffff;
   border-radius: 50%;
@@ -535,7 +535,7 @@ body {
   border-color: #ff6666 !important;
 }
 .btn-secondary-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -575,7 +575,7 @@ body {
   border-color: #47b5ed !important;
 }
 .btn-info-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -615,7 +615,7 @@ body {
   border-color: #40b0bf !important;
 }
 .btn-success-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -655,7 +655,7 @@ body {
   border-color: #ffe161 !important;
 }
 .btn-warning-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -695,7 +695,7 @@ body {
   border-color: #ff9966 !important;
 }
 .btn-danger-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -735,7 +735,7 @@ body {
   border-color: #232323 !important;
 }
 .btn-black-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -775,7 +775,7 @@ body {
   border-color: #fafafa !important;
 }
 .btn-white-outline:hover {
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: 0 15px 25px -10px rgba(0, 0, 0, 0.5) !important;
   transform: scale(1.1) rotateX(1deg) rotateY(0deg) rotateZ(4deg);
   color: #ffffff !important;
@@ -794,13 +794,13 @@ body {
   margin-left: 12px;
 }
 .btn-white:hover {
-  background: #4479d9 !important;
+  background: #001fff !important;
 }
 .btn-white:hover span {
-  color: #4479d9 !important;
+  color: #001fff !important;
 }
 .text-primary {
-  color: #4479d9 !important;
+  color: #001fff !important;
 }
 .text-secondary {
   color: #ff6666 !important;
@@ -826,7 +826,7 @@ body {
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
-  color: #1f4a98 !important;
+  color: #001399 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus,
@@ -872,7 +872,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-position: -10000px 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #4479d9;
+  color: #001fff;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -896,8 +896,8 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #4479d9;
-  border-color: #4479d9;
+  background-color: #001fff;
+  border-color: #001fff;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -908,11 +908,11 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 a,
 a:hover {
-  color: #4479d9;
+  color: #001fff;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #eef2fb;
+  color: #ccd2ff;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -946,7 +946,7 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px 0px, rgba(0, 0, 0, 0.07) 0px 1px 3px 0px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
-  border-color: #4479d9 !important;
+  border-color: #001fff !important;
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'Inter', sans-serif;
@@ -958,7 +958,7 @@ a:hover {
   font-size: 1.375rem;
 }
 blockquote {
-  border-color: #4479d9;
+  border-color: #001fff;
 }
 /* Forms */
 .mbr-form .input-group-btn a.btn {
@@ -976,14 +976,14 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #4479d9;
+  background-color: #001fff;
   color: #ffffff;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #4479d9;
+  border-color: #001fff;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -995,14 +995,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #4479d9;
-  border-bottom-color: #4479d9;
+  border-top-color: #001fff;
+  border-bottom-color: #001fff;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #ffffff !important;
-  background-color: #4479d9 !important;
+  background-color: #001fff !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -1033,7 +1033,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%234479d9' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23001fff' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -1095,7 +1095,7 @@ a {
 }
 .cid-sHbPYXhQhD .dropdown-item:hover,
 .cid-sHbPYXhQhD .dropdown-item:focus {
-  background: #4479d9 !important;
+  background: #001fff !important;
   color: white !important;
 }
 .cid-sHbPYXhQhD .dropdown-item:first-child {
@@ -1472,10 +1472,10 @@ a {
   color: #000000;
 }
 .cid-tU4PL6dKXn .mobi-mbri-arrow-next:hover {
-  color: #4479d9;
+  color: #001fff;
 }
 .cid-tU4PL6dKXn .mobi-mbri-arrow-prev:hover {
-  color: #4479d9;
+  color: #001fff;
 }
 .cid-tU4PL6dKXn .mobi-mbri-arrow-prev {
   margin-right: 5px;
@@ -1668,7 +1668,7 @@ a {
   color: #dfead9;
 }
 .cid-ugh8T86o7l .main-title {
-  color: #4479d9;
+  color: #001fff;
 }
 .cid-ughTCZCCiF {
   padding-top: 1rem;
@@ -1721,9 +1721,9 @@ a {
   top: 0;
 }
 .cid-sHbV4Rux6E {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  background-image: url("../../../assets/images/mbr-1920x1285.jpg");
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-image: url("../../../assets/images/mbr-4-1920x1280.jpg");
 }
 .cid-sHbV4Rux6E .image-wrapper {
   display: flex;
@@ -1753,7 +1753,7 @@ a {
 .cid-sHbV4Rux6E .mbr-iconfont {
   font-size: 4rem;
   padding-right: 2rem;
-  color: #4479d9;
+  color: #001fff;
 }
 @media (max-width: 767px) {
   .cid-sHbV4Rux6E .mbr-iconfont {
